# sakura-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
docs/: PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
src/: events.rs  main.rs  tasks.rs
src/commands/: check.rs  check_message.rs  counts.rs  info.rs  latency.rs  mod.rs  stats.rs
src/commands/config/: add_category_channel.rs  add_ignored_channel.rs  mod.rs  remove_category_channel.rs  remove_ignored_channel.rs  set_embed_color.rs  set_results_channel.rs  show.rs
src/events/: channel_delete.rs  channel_update.rs  guild_create.rs  guild_delete.rs  interaction_create.rs  member_update.rs  message_create.rs  message_delete.rs  message_delete_bulk.rs  message_update.rs  mod.rs  ready.rs  role_create.rs  role_delete.rs  role_update.rs
src/structs/: context.rs  interaction.rs  mod.rs
src/structs/cache/: channel.rs  current_user.rs  guild.rs  mod.rs  role.rs
src/structs/database/: event_log.rs  guild.rs  invite.rs  message.rs  mod.rs
src/types/: cache.rs  context.rs  database.rs  interaction.rs  mod.rs
src/utility/: constants.rs  decimal.rs  error.rs  gateway.rs  interaction.rs  message.rs  mod.rs  time.rs  types.rs
