[dependencies]
deadpool-postgres = "0.10.5"
dotenv = "0.15.0"
fancy-regex = "0.11.0"
futures = "0.3.28"
once_cell = "1.17.1"
parking_lot = "0.12.1"
postgres-types = { features = ["derive"], version = "0.2.5" }
serde = { default-features = false, features = ["derive"], version = "1.0.163" }
serde_json = "1.0.96"
thiserror = "1.0.40"
time = { default-features = false, features = ["parsing", "serde"], version = "0.3.21" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread", "sync"], version = "1.28.1" }
tokio-postgres = { default-features = false, features = ["with-serde_json-1", "with-time-0_3"], version = "0.7.8" }
twilight-gateway = "0.15.2"
twilight-http = "0.15.2"
twilight-interactions = "0.15.1"
twilight-model = "0.15.2"
twilight-util = { features = ["builder", "permission-calculator"], version = "0.15.2" }
twilight-validate = "0.15.1"

[package]
edition = "2021"
name = "sakura-rs"
version = "0.1.0"