[dependencies]
deadpool-postgres = "0.12.1"
dotenv = "0.15.0"
fancy-regex = "0.13.0"
futures = { version = "0.3", default-features = false }
memory-stats = "1.1.0"
once_cell = "1.19.0"
parking_lot = "0.12.1"
postgres-types = { features = ["derive"], version = "0.2.6" }
serde = { default-features = false, features = ["derive"], version = "1.0.197" }
serde_json = "1.0.114"
thiserror = "1.0.58"
thousands = "0.2.0"
time = { default-features = false, features = ["parsing", "serde"], version = "0.3.34" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread", "sync", "time"], version = "1.36.0" }
tokio-cron-scheduler = { features = ["signal"], version = "0.10.0" }
tokio-postgres = { default-features = false, features = ["with-serde_json-1", "with-time-0_3"], version = "0.7.10" }
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-interactions = "0.15.2"
twilight-model = "0.15.4"
twilight-util = { features = ["builder", "permission-calculator"], version = "0.15.4" }
twilight-validate = "0.15.3"

[package]
edition = "2021"
name = "sakura"
version = "1.0.0"